--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,20 @@
   }
 }
 
+@keyframes move-left {
+  0% {
+    transform: translateX(100vw);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-200px);
+    opacity: 1;
+  }
+}
+
+.animate-move-left {
+  animation: move-left 20s linear infinite;
+}
 
 
 
